--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/xylem/job/oSKBafw7'>Xylem Careers - Application Security Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oNylafwA&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=ngOAWLwQ'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on:: 2019-07-29</p>
@@ -67,7 +71,7 @@
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/5f12f0bc-7fa6-4759-9958-e9c5b0a0f4e3'>Shopify - Mobile Applications - Security Engineering Lead</a></h5> 
+<h5><a href='https://jobs.lever.co/shopify/5f12f0bc-7fa6-4759-9958-e9c5b0a0f4e3'>Shopify - Mobile Applications - Security Engineering Lead</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -160,7 +164,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEcRVLwS'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEcRVLwS'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -190,7 +194,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 performance of research-related tasks, including data collection, manipulation 
 and?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -204,11 +208,11 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/FE02BDC3A5'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/FE02BDC3A5'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -224,7 +228,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://sygnum.join.com/jobs/266848-senior-security-engineer'>Job @ Sygnum (Z?rich): Senior Security Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/266848-senior-security-engineer'>Job @ Sygnum (Z?rich): Senior Security Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Sygnum has a job opening for Senior Security Engineer in Z?rich (published: 
 23.08.2018). Apply now or check the other available jobs.</p>
@@ -290,7 +294,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 senior Network and Security engineer to deliver network and security services to
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999691979516-cyber-security-system-analyst'>Arthur Grand Technologies Inc Cyber Security System Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999691979516-cyber-security-system-analyst'>Arthur Grand Technologies Inc Cyber Security System Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -318,7 +322,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
+<h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -330,7 +334,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/0DF63DE72F'>QuintoAndar - Jobs: Information Security Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/0DF63DE72F'>QuintoAndar - Jobs: Information Security Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Information Security Analyst at QuintoAndar.</p>
 <hr/>
@@ -342,7 +346,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -350,7 +354,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oNylafwA&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUGuSKwb'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oNylafwA&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUGuSKwb'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -382,7 +386,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -409,7 +413,7 @@ Loading.</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of MS Cloud Security Engineer at Girteka Logistics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
+<h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 hours ago ... Apply online for the job of AAS2089-1 - IT/Cyber Security Engineer, Brussels - 
 Tue 23rd July (reissue) at EMW, Inc.</p>
@@ -422,7 +426,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/genesys/job/5nzbcrs18w49a8zboipkfa5bph'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/genesys/job/5nzbcrs18w49a8zboipkfa5bph'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -442,7 +446,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/j83xm57p8kop534ieu5riutn6c'>Security Architect  | JFR Staffing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/j83xm57p8kop534ieu5riutn6c'>Security Architect  | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -453,12 +457,6 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <h5><a href='https://boards.greenhouse.io/anaplan/jobs/4041125002?gh_src=b9e24da22'>Job Application for Senior Security Architect at Anaplan</a></h5> 
 <p><span class="badge badge-light">San Francisco, United States</span></p>
 <p>Posted on:: 2019-07-23</p>
-<hr/>
-<h5><a href='https://expedia.wd5.myworkdayjobs.com/en-US/search/job/USA---Austin-Domain-2---HomeAway/Senior-Security-Operations-Engineer_R-46184'>Senior Security Operations Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 15, 2019 ... Expedia. What You'll Do: Responsibilities. Responding to critical incidents, 
-threats, vulnerabilities and bring these issues to resolution; Continually create 
-new?...</p>
 <hr/>
 
 
