--- a/devops.html
+++ b/devops.html
@@ -38,8 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/loandepot/job/otBqafwo'>loanDepot Careers - Principal DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/alpha/384e6f7f-f959-47c4-85b1-2c8d5db9770c'>Telef?nica Alpha - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/loandepot/job/otBqafwo'>loanDepot Careers - Principal DevOps Engineer</a></h5> 
+<p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/datacom.co.nz/99f8458f-a056-4371-84ee-8d426911612d'>Datacom - DevOps Systems Admin/Engineer</a></h5> 
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/032FDD354F'>Wirecard Asia - Jobs: Application Engineer (DevOps) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/032FDD354F'>Wirecard Asia - Jobs: Application Engineer (DevOps) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -208,7 +212,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://upvest.join.com/jobs/261712-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upvest.join.com/jobs/261712-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -226,7 +230,7 @@ excited by our goal of infrastructure as code to work closely with our product a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4369387002?gh_jid=4369387002&gh_src=1a7229332'>Job Application for Senior DevOps Engineer at Cityblock Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4369387002?gh_jid=4369387002&gh_src=1a7229332'>Job Application for Senior DevOps Engineer at Cityblock Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... As a Sr. DevOps Engineer you will be writing software, tests, checks and 
 deployment mechanisms that assist in the software development life cycle. 
@@ -274,7 +278,7 @@ be working as part of a team based in Leeds and help build the infrastructure?..
 <p>4 days ago ... Alyona has a PhD in NLP and Machine Learning with an international reputation, 
 and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ehealth/job/onQCafwJ'>eHealth Careers - Manager, DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ehealth/job/onQCafwJ'>eHealth Careers - Manager, DevOps</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -300,7 +304,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/idt/a406cb4a-3923-4930-ad0e-d6c805adb64b'>IDT - Director of Development Operations - DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/idt/a406cb4a-3923-4930-ad0e-d6c805adb64b'>IDT - Director of Development Operations - DevOps</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -312,7 +316,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -363,7 +367,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/magenic/job/oW9DafwC'>Magenic Careers - Senior DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/magenic/job/oW9DafwC'>Magenic Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -371,7 +375,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312070-devops-engineer-cloud-automation-engineering-'>Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312070-devops-engineer-cloud-automation-engineering-'>Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -460,10 +464,6 @@ term?...</p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/nymedia/71f5227e-5ee8-4a49-839b-ebb38d8fc713'>New York Media - DevOps Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
