--- a/machine.html
+++ b/machine.html
@@ -69,7 +69,7 @@ recognition, categorization, text embedding, etc); Computer Vision, Image?...</p
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
 SmartNews, Inc.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -152,7 +152,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/o9aaafwn'>Numbrs Personal Finance AG Careers - Machine Learning Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o9aaafwn'>Numbrs Personal Finance AG Careers - Machine Learning Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -168,13 +168,13 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/backend-engineer-machine-learning-services'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/backend-engineer-machine-learning-services'>
       Backend Engineer ? Machine Learning Services - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
+<h5><a href='https://genie-ai.workable.com/j/EAC94C73A0'>Genie AI - Jobs: Machine Learning Researcher - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -199,7 +199,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p>4 days ago ... Advertima AG has a job opening for Computer Vision & Machine Learning 
 Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aifoundation/3eb05c48-efc6-4226-ba37-caf2214ab815'>AI Foundation - Machine Learning Infrastructure Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/aifoundation/3eb05c48-efc6-4226-ba37-caf2214ab815'>AI Foundation - Machine Learning Infrastructure Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -244,7 +244,7 @@ a career change to somewhere where you can really make a difference,?...</p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Business Analyst-Finance San Jose (CA); Business Development Director San 
 Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?...</p>
@@ -253,7 +253,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -269,7 +269,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
@@ -282,7 +282,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1786624'>Job Application for Principal Software Machine Learning Engineer at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1786624'>Job Application for Principal Software Machine Learning Engineer at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -302,7 +302,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -310,7 +310,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Senior Machine Learning Engineer at Codete.</p>
 <hr/>
@@ -334,7 +334,7 @@ or?...</p>
 <p>3 days ago ... As a member of EY's core Tax practice, you'll develop a deep tax technical 
 knowledge and outstanding database, data analytics and programming skills.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/featurespace/jobs/1783455'>Job Application for Machine Learning Engineer US at Featurespace</a></h5> 
+<h5><a href='https://boards.greenhouse.io/featurespace/jobs/1783455'>Job Application for Machine Learning Engineer US at Featurespace</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -372,7 +372,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -414,7 +414,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p>6 ?? ... Apply online for the job of Software Engineer, Machine Learning [New Graduate 
 Position] at Mercari, inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/024d6557-5400-47a2-b68f-1abe3136b20d'>Labelbox - Head of Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/labelbox/024d6557-5400-47a2-b68f-1abe3136b20d'>Labelbox - Head of Machine Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
